--- a/TFG.ipynb
+++ b/TFG.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -46,7 +46,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -152,33 +152,149 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "Versio multiPoint del geojson"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import utm\n",
+    "def simple(x):\n",
+    "    return str(x)\n",
+    "def algo(x):\n",
+    "    \n",
+    "    return \"%02d\" % (x,)\n",
+    "def algo2(x):\n",
+    "    \n",
+    "    return \"%02d\" % (x+2,)\n",
+    "def createJSMulti():\n",
+    "\n",
+    "    #mesosAny={'1':'de Gener','2': 'de Febrer','3': 'de Març','4':\"d'Abril\",'5': 'de Maig','6': 'de Juny','7': 'de Juliol','8': \"d'Agost\",'9': 'de Setembre','10': \"d'Octubre\",'11': 'de Novembre','12': 'de Desembre'}\n",
+    "\n",
+    "    i=\"3\"\n",
+    "\n",
+    "    result = general[0]#pd.concat(general)\n",
+    "    result['data']=result[\"NK Any\"].map(simple)+\"-\"+ result[\"Mes de any\"].map(algo)+'-'+result[\"Dia de mes\"].map(algo)\n",
+    "    result['end']=result[\"NK Any\"].map(simple)+\"-\"+ result[\"Mes de any\"].map(algo)+'-'+result[\"Dia de mes\"].map(algo2)\n",
+    "    #result.sort_values(by='data', ascending=False)\n",
+    "    dates=result.groupby(['data'])['data']\n",
+    "    #print dates\n",
+    "    fout= open(\"accidentsMulti.js\", 'w')\n",
+    "    posarComaEntre=False\n",
+    "    fout.write('var accidents = {\\n')\n",
+    "    fout.write('  \"type\": \"FeatureCollection\",\\n')\n",
+    "    fout.write('  \"features\": [\\n')\n",
+    "    for data in dates.groups:\n",
+    "        \n",
+    "        \n",
+    "        if posarComaEntre:\n",
+    "            fout.write(',\\n')\n",
+    "        posarComaEntre=True\n",
+    "        dataInfo=result[result['data'] == data]\n",
+    "\n",
+    "        fout.write('    {\\n')\n",
+    "        fout.write('      \"type\": \"Feature\",\\n')\n",
+    "        fout.write('      \"properties\": {\\n')\n",
+    "        fout.write('        \"start\": \"'+ str(dataInfo[\"data\"].iloc[0])+'\",\\n')\n",
+    "        fout.write('        \"end\": \"'+str(dataInfo[\"end\"].iloc[0])+'\"\\n')\n",
+    "\n",
+    "        \n",
+    "        fout.write('      },\\n')\n",
+    "        fout.write('      \"geometry\": { \\n')\n",
+    "        fout.write('        \"type\":\"MultiPoint\",\\n')\n",
+    "        fout.write('        \"coordinates\":[')\n",
+    "        posarComa=False\n",
+    "        for index, info in result[result['data'] == data].iterrows(): \n",
+    "            try:\n",
+    "                coord=utm.to_latlon(float(str(info[\"Coordenada UTM (X)\"]).replace(',', '.')), float(str(info[\"Coordenada UTM (Y)\"]).replace(',', '.')),  31, 'T')\n",
+    "                if posarComa:\n",
+    "                    fout.write(', ')\n",
+    "                posarComa=True\n",
+    "            \n",
+    "                #coord=utm.to_latlon(float(str(info[\"Coordenada UTM (X)\"]).replace(',', '.')), float(str(info[\"Coordenada UTM (Y)\"]).replace(',', '.')),  31, 'T')\n",
+    "                fout.write('['+\"%.6f\" % coord[1]+', '+\"%.6f\" % coord[0] +']')\n",
+    "            except:\n",
+    "                print float(str(info[\"Coordenada UTM (X)\"]).replace(',', '.')), float(str(info[\"Coordenada UTM (Y)\"]).replace(',', '.'))\n",
+    "                \n",
+    "        fout.write(']\\n      }\\n')\n",
+    "        fout.write('    }')            \n",
+    "    fout.write('\\n  ]\\n')\n",
+    "    fout.write('};')\n",
+    "\n",
+    "    fout.close()\n",
+    "createJSMulti()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Versio corregida del geoJson point"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'01'"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "import utm\n",
+    "posarComa=False\n",
+    "fout= open(\"accidents.geojson\", 'w')\n",
+    "fout.write('{\\n')\n",
+    "fout.write('  \"type\": \"FeatureCollection\",\\n')\n",
+    "fout.write('  \"features\": [\\n')\n",
+    "for i in range(0,1):\n",
+    "    for index, info in general[i].iterrows(): \n",
+    "        try:\n",
+    "            coord=utm.to_latlon(float(str(info[\"Coordenada UTM (X)\"]).replace(',', '.')), float(str(info[\"Coordenada UTM (Y)\"]).replace(',', '.')),  31, 'T')\n",
+    "            if posarComa:\n",
+    "                fout.write(',\\n')\n",
+    "            posarComa=True\n",
+    "            fout.write('    {\\n')\n",
+    "            fout.write('      \"type\": \"Feature\",\\n')\n",
+    "            fout.write('      \"properties\": {\\n')\n",
+    "            fout.write('        \"numEx\": \"'+str(info[\"Numero dexpedient\"])+'\",\\n')\n",
+    "            fout.write('        \"cotxes\": \"'+str(info[\"Numero de vehicles implicats\"])+'\",\\n')\n",
+    "\n",
+    "            #algo = tipus[i][info[\"Numero dexpedient\"]== tipus[i][\"Numero dexpedient\"]][\"Descripcio tipus accident\"].iloc(0)\n",
+    "            #fout.write('        \"causes\": \"'+str(algo)+'\",\\n')\n",
+    "\n",
+    "\n",
+    "            fout.write('        \"morts\": \"'+str(info[\"Numero de morts\"])+'\",\\n')\n",
+    "            fout.write('        \"greus\": \"'+str(info[\"Numero de lesionats greus\"])+'\",\\n')\n",
+    "            fout.write('        \"lleus\": \"'+str(info[\"Numero de lesionats lleus\"])+'\",\\n')\n",
+    "            fout.write('        \"start\": \"'+ str(info[\"NK Any\"])+\"-\"+ \"%02d\" % (info[\"Mes de any\"],)+'-'+\"%02d\" % (info[\"Dia de mes\"],)+' '+ \"%02d\" % (info[\"Hora de dia\"],)+':00\",\\n')\n",
+    "            fout.write('        \"end\": \"'+ str(info[\"NK Any\"])+\"-\"+ \"%02d\" % (info[\"Mes de any\"],)+'-'+\"%02d\" % (info[\"Dia de mes\"],)+' '+ \"%02d\" % (info[\"Hora de dia\"]+3,)+':00\"\\n')\n",
+    "            #coord=utm.to_latlon(float(str(info[\"Coordenada UTM (X)\"]).replace(',', '.')), float(str(info[\"Coordenada UTM (Y)\"]).replace(',', '.')),  31, 'T')\n",
+    "            fout.write('      },\\n')\n",
+    "            fout.write('      \"geometry\": { \\n')\n",
+    "            fout.write('        \"type\":\"Point\",\\n')\n",
+    "        \n",
+    "            #coord=utm.to_latlon(float(str(info[\"Coordenada UTM (X)\"]).replace(',', '.')), float(str(info[\"Coordenada UTM (Y)\"]).replace(',', '.')),  31, 'T')\n",
+    "            fout.write('        \"coordinates\":['+\"%.6f\" % coord[0]+', '+\"%.6f\" % coord[1] +']\\n')\n",
+    "            fout.write('      }\\n')\n",
+    "            fout.write('    }')\n",
+    "        except:\n",
+    "            print float(str(info[\"Coordenada UTM (X)\"]).replace(',', '.')), float(str(info[\"Coordenada UTM (Y)\"]).replace(',', '.'))\n",
+    "        \n",
+    "fout.write('\\n  ]\\n')\n",
+    "fout.write('}\\n')"
+   ]
   },
   {
    "cell_type": "code",
