Notebook checkpoint deleted

--- a/TFG.ipynb
+++ b/TFG.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -83,7 +83,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -340,6 +340,95 @@
    "source": [
     "Heat Map\n",
     "------------\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Mapa](http://nicofo.github.io/Estudi-Transit-BCN/mapa.html)\n",
+    "**TODO**\n",
+    "\n",
+    "CANVIAR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "global name 'general' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-a6dcc4e59a85>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     54\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     55\u001b[0m     \u001b[0mfout\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 56\u001b[1;33m \u001b[0mcreateJSMulti\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-2-a6dcc4e59a85>\u001b[0m in \u001b[0;36mcreateJSMulti\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mi\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"3\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgeneral\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;31m#pd.concat(general)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m     \u001b[0mresult\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'data'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"NK Any\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msimple\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"-\"\u001b[0m\u001b[1;33m+\u001b[0m \u001b[0mresult\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Mes de any\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0malgo\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m'-'\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Dia de mes\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0malgo\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[0mresult\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'end'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"NK Any\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msimple\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"-\"\u001b[0m\u001b[1;33m+\u001b[0m \u001b[0mresult\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Mes de any\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0malgo\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m'-'\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Dia de mes\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0malgo2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: global name 'general' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def createJSMulti():\n",
+    "\n",
+    "    #mesosAny={'1':'de Gener','2': 'de Febrer','3': 'de Març','4':\"d'Abril\",'5': 'de Maig','6': 'de Juny','7': 'de Juliol','8': \"d'Agost\",'9': 'de Setembre','10': \"d'Octubre\",'11': 'de Novembre','12': 'de Desembre'}\n",
+    "\n",
+    "    i=\"3\"\n",
+    "\n",
+    "    result = general[0]#pd.concat(general)\n",
+    "    result['data']=result[\"NK Any\"].map(simple)+\"-\"+ result[\"Mes de any\"].map(algo)+'-'+result[\"Dia de mes\"].map(algo)\n",
+    "    result['end']=result[\"NK Any\"].map(simple)+\"-\"+ result[\"Mes de any\"].map(algo)+'-'+result[\"Dia de mes\"].map(algo2)\n",
+    "    #result.sort_values(by='data', ascending=False)\n",
+    "    dates=result.groupby(['data'])['data']\n",
+    "    #print dates\n",
+    "    fout= open(\"accidentsMulti.js\", 'w')\n",
+    "    posarComaEntre=False\n",
+    "    fout.write('var accidents = {\\n')\n",
+    "    fout.write('  \"type\": \"FeatureCollection\",\\n')\n",
+    "    fout.write('  \"features\": [\\n')\n",
+    "    for data in dates.groups:\n",
+    "        \n",
+    "        \n",
+    "        if posarComaEntre:\n",
+    "            fout.write(',\\n')\n",
+    "        posarComaEntre=True\n",
+    "        dataInfo=result[result['data'] == data]\n",
+    "\n",
+    "        fout.write('    {\\n')\n",
+    "        fout.write('      \"type\": \"Feature\",\\n')\n",
+    "        fout.write('      \"properties\": {\\n')\n",
+    "        fout.write('        \"start\": \"'+ str(dataInfo[\"data\"].iloc[0])+'\",\\n')\n",
+    "        fout.write('        \"end\": \"'+str(dataInfo[\"end\"].iloc[0])+'\"\\n')\n",
+    "\n",
+    "        \n",
+    "        fout.write('      },\\n')\n",
+    "        fout.write('      \"geometry\": { \\n')\n",
+    "        fout.write('        \"type\":\"MultiPoint\",\\n')\n",
+    "        fout.write('        \"coordinates\":[')\n",
+    "        posarComa=False\n",
+    "        for index, info in result[result['data'] == data].iterrows(): \n",
+    "            try:\n",
+    "                coord=utm.to_latlon(float(str(info[\"Coordenada UTM (X)\"]).replace(',', '.')), float(str(info[\"Coordenada UTM (Y)\"]).replace(',', '.')),  31, 'T')\n",
+    "                if posarComa:\n",
+    "                    fout.write(', ')\n",
+    "                posarComa=True\n",
+    "            \n",
+    "                #coord=utm.to_latlon(float(str(info[\"Coordenada UTM (X)\"]).replace(',', '.')), float(str(info[\"Coordenada UTM (Y)\"]).replace(',', '.')),  31, 'T')\n",
+    "                fout.write('['+\"%.6f\" % coord[1]+', '+\"%.6f\" % coord[0] +']')\n",
+    "            except:\n",
+    "                print float(str(info[\"Coordenada UTM (X)\"]).replace(',', '.')), float(str(info[\"Coordenada UTM (Y)\"]).replace(',', '.'))\n",
+    "                \n",
+    "        fout.write(']\\n      }\\n')\n",
+    "        fout.write('    }')            \n",
+    "    fout.write('\\n  ]\\n')\n",
+    "    fout.write('};')\n",
+    "\n",
+    "    fout.close()\n",
+    "createJSMulti()"
    ]
   },
   {
